turing/dist/longhorn-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn
spec:
  defaultBackend:
    service:
      name: longhorn-frontend
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - longhorn
